// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
        >
          <img
            alt="./avatar.jpg"
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src="./avatar.jpg"
          />
           
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="s-9pbhBDjb6W8T"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Artist&gt;-->
</div>
`;

exports[`No album 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
        >
          <img
            alt="./avatar.jpg"
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src="./avatar.jpg"
          />
           
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="s-9pbhBDjb6W8T"
        slot="details"
      />
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Artist&gt;-->
</div>
`;

exports[`Unknown 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
        >
          <img
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg __hidden_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src=""
          />
           
          <i
            class="__inline-block_tliuhg_tliuhg __font-size-[200%]_tliuhg_tliuhg icons i-mdi-account s-JU4hIbuSbdGN"
            data-testid="i-mdi-account"
          />
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Unknown
      </h3>
       
      <h4
        class="s-9pbhBDjb6W8T"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Artist&gt;-->
</div>
`;
